# Exoplanet-Hunt

./: .gitignore  CONTRIBUTING.md  Instructions.rst  LICENSE  LogisticRegression.py  MANIFEST.in  README.md  README.rst  Random_Forest.py  SupportVectorMachine.py  conftest.py  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
Hunting for exoplanets/: Instructions.txt  model.py
Hunting for exoplanets/Models/: Leniar SVC.py  Logistic Regression.py  SVC.py
docs/: conf.py  index.rst
exohunter/: __init__.py  preprocess.py
exohunter/models/: LogisticRegression.py  SVM.py  __init__.py
licenses/: LICENSE.rst  README.rst
preprocessors/: reader.py
starlex/preprocessors/: reader.py
