[metadata]
name = exohunter
author = Abhijeet Manhas
author_email = abhijeetmanhas720@gmail.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/STAC-IITMandi/Exoplanet-Detection
description = Searching and detecting Exoplanets made easy with Machine Learning Models!
long_description = file: README.rst
keywords = Machine Learning, Exoplanet Detection, Data Science, Astrophysics, Astronomy
classifiers =
  Development Status :: 1 - Alpha
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
  numpy
  pandas
  scikit-learn

[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi

[options.package_data]
exohunter = data/*

[tool:pytest]
testpaths = "exohunter" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  exohunter/__init*
  exohunter/conftest.py
  exohunter/*setup_package*
  exohunter/tests/*
  exohunter/*/tests/*
  exohunter/extern/*
  exohunter/version*
  */exohunter/__init*
  */exohunter/conftest.py
  */exohunter/*setup_package*
  */exohunter/tests/*
  */exohunter/*/tests/*
  */exohunter/extern/*
  */exohunter/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
